Made more user-friendly

--- a/startup1.html
+++ b/startup1.html
@@ -113,7 +113,7 @@ nav ul li a:hover {
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #FFA500;
+    background-color: #fca90e;
     padding: 10px;
     border-radius: 5px;
     top: 100%;
