--- a/startup1.html
+++ b/startup1.html
@@ -4,247 +4,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ghar Ka Khana - Homemade Food Delivery</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style1.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>Ghar Ka Khana</h1>
-            <nav>
+            <h1 class="font-cursive">Ghar Ka Khana</h1>
+            <nav class="font-cursive">
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Menu</a></li>
+                    <li><a href="#scroll-top">Home</a></li>
                     <li class="dropdown">
-                        <a href="#">About Us</a>
-                        <div class="dropdown-content about-us">
-                            <p>Ghar Ka Khana is a startup dedicated to delivering healthy, homemade meals tailored to your preferences and dietary needs. Our mission is to provide nutritious and delicious food that brings joy to your dining experience.</p>
+                        <a href="#">Menu</a>
+                        <div class="dropdown-content">
+                            <a href="order.html">Order Now</a>
+                            <a href="accept.html">Accept Order</a>
                         </div>
                     </li>
-                    <li class="dropdown">
-                        <a href="#">Contact Us</a>
-                        <div class="dropdown-content contact-us">
-                            <p>Phone: 123-456-7890</p>
-                            <p>Email: example@example.com</p>
-                        </div>
-                    </li>
+                    <li><a href="#about-us">About Us</a></li>
+                    <li><a href="#contact-us">Contact Us</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     
-    <section class="hero">
-        <div class="container">
-            <h2>Delicious Homemade Food Delivered to Your Doorstep!</h2>
-            <p>Order now and enjoy the taste of home-cooked meals.</p>
-            <a href="order.html" class="btn btn-order">Order Now</a>
-            <a href="accept.html" class="btn btn-accept">Accept Order</a>
-        </div>
-    </section>
+    <div class="scroll-content">
+        <section class="hero">
+            <div class="container-hero">
+                <h2>Delicious Homemade Food Delivered to Your Doorstep!</h2>
+                <p>Order now and enjoy the taste of home-cooked meals.</p>
+                <a href="order.html" class="btn btn-order">Order Now</a>
+                <a href="accept.html" class="btn btn-accept">Accept Order</a>
+            </div>
+        </section>
 
-    <footer>
-        <div class="container">
-            <p>&copy; 2024 Ghar Ka Khana - Homemade Food Delivery</p>
-        </div>
-    </footer>
+        <section id="about-us" class="scroll-section about-us-background">
+            <div class="container-about-us font-cursive">
+                <div class="about-us-content">
+                    <h2>About Us</h2>
+                    <p>Ghar Ka Khana is a startup dedicated to delivering healthy, homemade meals tailored to your preferences and dietary needs. Our mission is to provide nutritious and delicious food that brings joy to your dining experience.</p>
+                </div>
+            </div>
+        </section>
+        
+        <footer>
+            <div class="container">
+                <ul>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">Refund Policy</a></li>
+                </ul>
+                <p>&copy; 2024 Ghar Ka Khana - Homemade Food Delivery</p>
+            </div>
+        </footer>
+    </div>
 
-    <script src="scripts.js"></script>
+    <script src="script1.js"></script>
 </body>
-<style>
-body, h1, h2, p, ul, li {
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    font-family: 'Roboto', sans-serif;
-    line-height: 1.6;
-    background-color: #f9f9f9;
-    color: #333;
-}
-
-.container {
-    width: 80%;
-    margin: 0 auto;
-    padding: 20px;
-}
-
-header {
-    background-color: #333;
-    color: #fff;
-    padding: 20px 0;
-}
-
-header .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-header h1 {
-    font-size: 2.5em;
-    color: #fff;
-}
-
-nav ul {
-    list-style-type: none;
-    display: flex;
-}
-
-nav ul li {
-    margin-right: 20px;
-}
-
-nav ul li a {
-    text-decoration: none;
-    color: #fff;
-    font-weight: bold;
-    transition: color 0.3s ease;
-}
-
-nav ul li a:hover {
-    color: #FFA500;
-}
-
-/* Dropdown styles */
-.dropdown {
-    position: relative;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #fca90e;
-    padding: 10px;
-    border-radius: 5px;
-    top: 100%;
-    left: 0;
-    width: max-content;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-    animation: slideInDown 0.5s ease-in-out;
-}
-
-.dropdown-content p {
-    color: #fff;
-    margin-bottom: 5px;
-}
-
-.about-us {
-    width: 320px;
-}
-
-.contact-us {
-    width: 230px;
-}
-
-.hero {
-    background-image: url('https://r4.wallpaperflare.com/wallpaper/495/760/53/cuisine-food-india-indian-wallpaper-39e088fd713a4d7ba617b8bf90f1e6dd.jpg'); /* Replace 'hero-image.jpg' with your image */
-    background-size: cover;
-    background-position: center;
-    color: #fff;
-    text-align: center;
-    padding: 40px 0 200px;
-}
-
-.hero h2 {
-    font-size: 3em;
-    margin-bottom: 10px;
-    animation: slideInDown 1s ease-out;
-}
-
-.hero p {
-    font-size: 1.2em;
-    margin-bottom: 30px;
-    animation: slideInUp 1s ease-out;
-}
-
-.btn {
-    display: inline-block;
-    background-color: #FFA500;
-    color: #fff;
-    padding: 15px 30px;
-    text-decoration: none;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-    animation: zoomIn 1s ease-out;
-}
-
-.btn:hover {
-    background-color: #FF7F00;
-    transform: scale(1.05);
-}
-
-.btn-order {
-    margin-top: 40px;
-}
-
-footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 10px 0;
-}
-
-.btn-accept {
-    display: inline-block;
-    background-color: #FFA500;
-    color: #fff;
-    padding: 15px 30px;
-    text-decoration: none;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-    animation: zoomIn 1s ease-out;
-    margin-left: 20px;
-}
-
-.btn-accept:hover {
-    background-color: #FF7F00;
-    transform: scale(1.05);
-}
-
-/* Keyframe animations */
-@keyframes slideInDown {
-    from {
-        transform: translateY(-10px);
-        opacity: 0;
-    }
-    to {
-        transform: translateY(0);
-        opacity: 1;
-    }
-}
-
-@keyframes slideInUp {
-    from {
-        transform: translateY(10px);
-        opacity: 0;
-    }
-    to {
-        transform: translateY(0);
-        opacity: 1;
-    }
-}
-
-@keyframes zoomIn {
-    from {
-        transform: scale(0);
-        opacity: 0;
-    }
-    to {
-        transform: scale(1);
-        opacity: 1;
-    }
-}
-
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-}
-</style>
 </html>
