--- a/public/order.html
+++ b/public/order.html
@@ -28,7 +28,7 @@
                 <img src="logo.png" alt="Logo">
             </div>
             <nav class="nav-links">
-                <a href="home.html" class="home-link">Home</a>
+                <a href="index.html" class="home-link">Home</a>
             </nav>
         </div>
     </header>
